fixed some layout issues

--- a/WeddingDressesWebsite/Content/css/Site.css
+++ b/WeddingDressesWebsite/Content/css/Site.css
@@ -91,16 +91,15 @@ textarea {
 
 footer {
 	padding-left:25px;
-	margin-top:30px;
+	padding-top:30px;
+	padding-bottom:50px;
 	width:100%;
-	height:100px;
-	text-align:left;
+	text-align:center;
 	background-size: 100% 100%;
-	color: #808080;
-	text-shadow:0px 0px 1px #fff;
-	font-weight:400;
-	line-height: 1.5em;
-	background-color:rgba(255,255,255,0.0) !important;
+	color: wheat;
+	font-weight:200;
+	line-height: 1em;
+	background-color:black;
 }
 
 #main-page-carousel {
@@ -112,7 +111,7 @@ footer {
 }
 
 .catalog-gallery {
-  position:fixed;
+  position:relative;
   right:10px;
   margin-top:70px;
   width: 90%;
